app working up until the user management.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,9 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*", "/src/*"]
     },
-
+    "moduleResolution": "node",
     "noUnusedLocals": false
   }
 }
